--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "link": "^1.5.1",
     "react": "18.1.0",
     "react-native": "^0.70.6",
+    "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-linear-gradient": "react-native-community/react-native-linear-gradient",
+    "react-native-modal": "^13.0.1",
+    "react-native-progress": "^5.0.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
